force-app/main/default/objects/CXM_Survey__c/CXM_Survey__c.object-meta.xml
<CustomObject>
    <label>CXM Survey</label>
    <nameField>
        <displayFormat>CXM-{000000}</displayFormat>
        <label>CXM Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CXM Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>