force-app/main/default/objects/CXM_Survey__c/fields/Activity_description__c.field-meta.xml
<CustomField>
    <fullName>Activity_description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activity description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>