force-app/main/default/objects/CXM_Survey__c/fields/ActivityDesc__c.field-meta.xml
<CustomField>
    <fullName>ActivityDesc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ActivityDesc</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>