force-app/main/default/objects/CXM_Survey__c/fields/ComplaintIssue__c.field-meta.xml
<CustomField>
    <fullName>ComplaintIssue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ComplaintIssue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>