force-app/main/default/objects/CXM_Survey__c/fields/Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>