force-app/main/default/objects/CXM_Survey__c/fields/parentBusinessOutcome__c.field-meta.xml
<CustomField>
    <fullName>parentBusinessOutcome__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>parentBusinessOutcome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>