force-app/main/default/objects/CXM_Survey__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source</label>
    <length>150</length>
    <type>Text</type>
</CustomField>