force-app/main/default/objects/CXM_Survey__c/fields/Sub_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sub_Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sub Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>