force-app/main/default/objects/CXM_Survey__c/fields/Survey_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Survey_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Datetime</label>
    <type>DateTime</type>
</CustomField>