force-app/main/default/objects/CXM_Survey__c/fields/Survey_Score__c.field-meta.xml
<CustomField>
    <fullName>Survey_Score__c</fullName>
    <label>Survey Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>